--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             </div>
             <div id="home" class="py-3">
                 <h2 class="text-center"></h2>
-                <p class="text-center"><img src="img/htmlcss2.jpg" alt="fotohtmlcss" width="80%"></p>
-
+                <p class="text-center"><img src="img/fondoo.jpg" alt="fondo 1" width="41.2%"><class="text-center"><img src="img/fondo.jpg" alt="fondo 2" width="40%">
+                <class="text-center"><img src="img/fondo4.jpg" alt="fondo 3" width="46.3%"><class="text-center"><img src="img/fondo5.png" alt="fondo 4" width="34.8%"></p>
             </div>
         </main>
         <footer>
