--- a/multimedia.html
+++ b/multimedia.html
@@ -75,9 +75,9 @@
                 </video>
                 <h3>Audio:</h3>
                 <audio controls>
-                    <source src="horse.ogg" type="audio/ogg">
-                    <source src="horse.mp3" type="audio/mpeg">
-                    <source src="horse.mp3" type="audio/mp3">
+                    <source src="resources/Presentacion.mp3" type="audio/mp3">
+                    <source src="resources/Presentacion.wav" type="audio/wav">
+                    <source src="resources/Presentacion.ogg" type="audio/ogg">
                 </audio>
                 <h3>Video Youtube iFrame:</h3>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/_UBSIO8rP88?si=Cb-SV6ci4heYBnSJ"
