--- a/multimedia.html
+++ b/multimedia.html
@@ -69,9 +69,9 @@
             <div id="multimedia" class="p-3">
                 <h2 class="text-center">MULTIMEDIA</h2>
                 <video width="100%" autoplay controls>
-                    <source src="/resources/Burgohondo.mp4" type="video/mp4">
-                    <source src="/resources/Burgohondo.webm" type="video/webm">
-                    <source src="/resources/Burgohondo.ogg" type="video/ogg">
+                    <source src="resources/Burgohondo.mp4" type="video/mp4">
+                    <source src="resources/Burgohondo.webm" type="video/webm">
+                    <source src="resources/Burgohondo.ogg" type="video/ogg">
                 </video>
                 <h3>Audio:</h3>
                 <audio controls>
